--- a/src/app.css
+++ b/src/app.css
@@ -75,3 +75,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+}
